feat(frontend): read environment variables at container startup
following guide https://pumpingco.de/blog/environment-variables-angular-docker/

Signed-off-by: Thomas Stadler <thomas@thomasst.xyz>

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,9 @@
       top: 50%; }
 
     </style>
-</head>
+    
+    <!-- Load environment variables -->
+    <script src="assets/env.js"></script></head>
 <body>
   <app-root>
       <div id="loader"><img src="assets/img/loader-preview.svg" alt="loading"></div>
